<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, ProxytestActivity!</string>
    <string name="app_name">Proxytest</string>
    <string name="file_url_title">The url of download file</string>

    <string name="proxy_clear_text">Clear</string>
    <string name="proxy_port_label">Proxy port</string>
    <string name="proxy_action_text">Done</string>
    <string name="proxy_hostname_label">Proxy hostname</string>
    
    <string name="proxy_error_dismiss">OK</string>
    <string name="proxy_error_invalid_host">The hostname you typed isn\'t valid.</string>
    <string name="proxy_error_empty_port">You must complete the port field.</string>
    <string name="proxy_error_empty_host_set_port">The port field must be empty if the host field is empty.</string>
    <string name="proxy_error_invalid_port">The port you typed isn\'t valid.</string>
    
   	<string name="download_begin">Begin...</string>
	<string name="has_download">Download : </string>	
	<string name="download_title">Downloading File</string>
</resources>