<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="3dip"
        android:paddingLeft="6dip"
        android:paddingRight="6dip"
        android:scrollbars="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dip"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/file_url_title"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/file_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dip"
            android:imeOptions="actionDone"
            android:scrollHorizontally="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dip"
            android:maxLines="1"
            android:text="@string/proxy_hostname_label"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/hostname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dip"
            android:maxLines="1"
            android:scrollHorizontally="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dip"
            android:maxLines="1"
            android:text="@string/proxy_port_label"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dip"
            android:maxLines="1"
            android:numeric="integer"
            android:scrollHorizontally="true" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dip" >

            <Button
                android:id="@+id/action"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/proxy_action_text" />

            <Button
                android:id="@+id/clear"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/proxy_clear_text" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>